# Framyz

./: .env.cmake  .gitignore  AddIMGUI.cmake  AddJolt.cmake  CMakeLists.txt  README.md
Application/: CMakeLists.txt
Application/src/: Main.cpp
Engine/: CMakeLists.txt
Engine/src/: Clock.cpp  Clock.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  GameManager.cpp  GameManager.h  Scene.h  Transform.cpp  Transform.h  engine.hpp  framework.h
Engine/src/ECS/: EntityManager.cpp  EntityManager.h
Engine/src/ECS/components/: BoxCollider3D.cpp  BoxCollider3D.h  Camera.cpp  Camera.h  ComponentBase.cpp  ComponentBase.h  MeshRenderer.cpp  MeshRenderer.h  Rigidbody3D.cpp  Rigidbody3D.h
Engine/src/ECS/components/physics/: BoxCollider3D.cpp  BoxCollider3D.h  Collider3D.cpp  Collider3D.h  Rigidbody3D.cpp  Rigidbody3D.h  SphereCollider3D.cpp  SphereCollider3D.h
Engine/src/asset/: AssetLoader.cpp
Engine/src/interfaces/: IEditorWindow.cpp  IEditorWindow.h
Engine/src/interfaces/editor/: HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h  SceneWindow.cpp  SceneWindow.h
Engine/src/interfaces/nodes/: NodeEditor.cpp  NodeEditor.h
Engine/src/jolt/: JoltHandler.h  define.h
Engine/src/systems/: BaseSystem.cpp  BaseSystem.h  EditorSystem.cpp  EditorSystem.h  PhysicSystem.cpp  PhysicSystem.h  RenderSystem.cpp  RenderSystem.h  systems.h
Engine/src/systems/physics/: PhysicDebugLayer.cpp  PhysicDebugLayer.h  PhysicSystem.cpp  PhysicSystem.h
Render/: CMakeLists.txt
Render/src/: Color.h  GeometryFactory.cpp  GuiHandler.cpp  Inputs.cpp  Inputs.h  Material.cpp  Material.h  Mesh.cpp  RenderContext.cpp  RenderContext.h  RenderDevice.cpp  RenderDevice.h  RenderObject.cpp  RenderObject.h  RenderPipeline.cpp  RenderPipeline.h  RenderTarget.cpp  RenderTarget.h  RenderWindow.cpp  RenderWindow.h  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  framework.h
Tools/: CMakeLists.txt
Tools/src/: defines.h  tools.hpp
shaders/: compile.bat  shader.frag.spv
src/: main.cpp
src/Engine/: Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  GameManager.cpp  GameManager.h  Transform.cpp  Transform.h  engine.hpp  framework.h
src/Engine/ECS/: EntityManager.cpp  EntityManager.h  ecs.h
src/Engine/ECS/components/: Camera.cpp  Camera.h  ComponentBase.cpp  ComponentBase.h  MeshRenderer.cpp  MeshRenderer.h
src/Engine/asset/: AssetLoader.cpp  AssetLoader.h
src/Engine/assets/: AssetLoader.cpp  AssetLoader.h
src/Engine/editor/: Editor.cpp  Editor.h  InspectorWindow.cpp
src/Engine/interfaces/: IEditorWindow.cpp  IEditorWindow.h  interfaces.h
src/Engine/interfaces/editor/: Editor.cpp  Editor.h  InspectorWindow.cpp  InspectorWindow.h  SceneWindow.cpp  SceneWindow.h
src/Engine/interfaces/nodes/: NodeEditor.cpp  NodeEditor.h  node.hpp
src/Engine/jolt/: JoltHandler.cpp
src/Engine/nodes/: NodeEditor.h  node.hpp
src/Engine/systems/: BaseSystem.cpp  BaseSystem.h  EditorSystem.cpp  EditorSystem.h  PhysicSystem.cpp  PhysicSystem.h  RenderSystem.cpp  RenderSystem.h  systems.h
src/Render/: Application.cpp  Application.h  GeometryFactory.h  GuiHandler.cpp  Mesh.cpp  Mesh.h  RenderContext.cpp  RenderContext.h  RenderDevice.cpp  RenderDevice.h  RenderObject.cpp  RenderObject.h  RenderPipeline.cpp  RenderPipeline.h  RenderTarget.cpp  RenderTarget.h  RenderWindow.cpp  Sampler.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  framework.h  main.cpp  render.hpp
